force-app/main/default/objects/Milestone__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A grouping of milestones</description>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>