force-app/main/default/objects/Milestone__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <description>A textual current status of the milestone.</description>
    <inlineHelpText>A textual current status of the milestone.</inlineHelpText>
    <label>Current State</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>