force-app/main/default/objects/Milestone__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A more complete explanation of the milestone.</description>
    <inlineHelpText>A more complete explanation of the milestone.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>