force-app/main/default/objects/Milestone__c/fields/Display_in_Reports__c.field-meta.xml
<CustomField>
    <fullName>Display_in_Reports__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display in Reports</label>
    <type>Checkbox</type>
</CustomField>