force-app/main/default/objects/Milestone__c/fields/FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>FiscalYear__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY21</fullName>
                <default>true</default>
                <label>FY21</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>