force-app/main/default/objects/Milestone__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>Specifies a target completion date for the milestone, and by inference, relative priority.</description>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15_Days</fullName>
                <label>15 Days</label>
            </value>
            <value>
                <fullName>30_Days</fullName>
                <label>30 Days</label>
            </value>
            <value>
                <fullName>60_Days</fullName>
                <label>60 Days</label>
            </value>
            <value>
                <fullName>90_Days</fullName>
                <label>90 Days</label>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>