force-app/main/default/objects/Milestone__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <description>A list of names of individuals who are stakeholders tor the milestone</description>
    <label>Stakeholders</label>
    <type>TextArea</type>
</CustomField>