force-app/main/default/objects/Milestone__c/recordTypes/Profession_Milestone.recordType-meta.xml
<RecordType>
    <fullName>Profession_Milestone</fullName>
    <active>true</active>
    <label>Profession Milestone</label>
</RecordType>